Add complete support for 7tv stuff, many bugfixes and add keyword feature!